# hedge-fund-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/: base.py
agents/execution/: agent.py  slippage.py
agents/execution/tests/: test_execution_agent.py
agents/macro/: agent.py  regime_classifier.py
agents/macro/tests/: test_macro_agent.py
agents/quant/: agent.py  factors.py
agents/quant/tests/: test_quant_agent.py
agents/risk/: agent.py  constraints.py  metrics.py
agents/risk/tests/: test_risk_agent.py
agents/sentiment/: agent.py  nlp_model.py
api/: main.py
api/routes/: backtest.py  portfolio.py  signals.py  strategy.py  ws.py
backtest/: engine.py  performance.py
config/: constants.py  settings.py
data/: pipeline.py
data/ingestion/: macro_fetcher.py  news_fetcher.py  price_fetcher.py
db/: client.py
db/models/: agent_log.py  asset.py  market_bar.py  news_item.py  portfolio.py  risk_metrics.py  signal.py  trade.py
design/: agent_interfaces.md  api_contracts.md  folder_structure.txt  schemas.json
explainability/: chain_builder.py
frontend/: index.html
llm/: provider.py
orchestrator/: dag.py  memory.py  runner.py  signal_aggregator.py
scripts/: run_pipeline.py  seed_db.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
