[tool.poetry]
name = "hedge-fund-platform"
version = "0.1.0"
description = "AI-powered multi-agent hedge fund simulation platform"
authors = ["Varshit Manepalli"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.12"
websockets = "^13.1"

# Database
motor = "^3.6.0"           # Async MongoDB driver
beanie = "^1.27.0"         # MongoDB ODM on top of Motor
pymongo = "^4.10.0"

# Data & ML
yfinance = "^0.2.48"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
scipy = "^1.14.0"
torch = "^2.4.0"

# NLP / HuggingFace
transformers = "^4.44.0"
sentencepiece = "^0.2.0"

# HTTP / data fetching
httpx = "^0.27.0"
aiohttp = "^3.10.0"
requests = "^2.32.0"

# Config & validation
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
python-dotenv = "^1.0.0"

# Logging
loguru = "^0.7.0"
structlog = "^24.4.0"

# Orchestration
langgraph = "^0.2.0"
langchain-core = "^0.3.0"

# Utilities
python-dateutil = "^2.9.0"
pytz = "^2024.2"
uuid = "^1.30"
tenacity = "^9.0.0"         # Retry logic

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.0"           # For TestClient
ruff = "^0.6.0"
black = "^24.8.0"
mypy = "^1.11.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["agents", "orchestrator", "backtest", "tests"]
